@@ -3,6 +3,7 @@ Koan CHANGELOG
 - XXX 1.4.3
 - (SPEC) reduce python version requirements for EL2 (--replace-self only)
 - (BUGF) fix traceback in import when using --kickstart option
+- (BUGF) don't require ImageParser, allowing --virt to still work on older EL
 
 - Thu Feb 12 2009 Michael DeHaan <mdehaan@redhat.com> - 1.4.2
 - (BUGF) make LVM storage work regardless of localization
